JOI-5 refactor z-index (prevent overlapping)

--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -7,7 +7,7 @@
   display: flex;
   align-items: center;
   gap:8px;
-  z-index: 0;
+  z-index: 999;
 }
 
 .app-title {
